--- a/train1/index.html
+++ b/train1/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body style="background-color: aqua">
-    <h1>Howdy HO MAZAFUCKA YOBA YODA</h1>
+    <h1>Howdy HO MAZAFUCKA YOBA YODA some new shit</h1>
     <img src="" alt="" />
   </body>
 </html>
